[package]
name = "rust-game"
version = "0.0.1"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true #"thin"
strip = true
codegen-units = 1
panic = "abort"

#https://github.com/zkat/awesome-bevy

[dependencies]
bevy_editor_pls = "0.4.0"
bevy = { version = "0.10.1", features = ["trace", "png"] }
bevy_mod_picking = { version = "0.13.0", features = ["highlight"] }
bevy_rapier3d = { version = "0.21.0", features = [ "simd-stable", "debug-render-3d" ] }
bevy_turborand = { version = "0.5.0", features = ["rand"] }
bevy_mod_gizmos = { git = "https://github.com/DGriffin91/bevy_mod_gizmo", commit = "81fe53caa1f777b3c0c9396d81b28ad166f3c6fe" }
bevy_polyline = "0.6.0"

#bevy_hanabi - particles
#kayak-ui - ui
#bevy_asset_loader - extended asset loading
#oxidized_navigation - path finding
#bevy_kira_audio - audio 
#Kurinji - input mapping
#bevy_easings - easing between things, pulsing etc

#bevy-inspector-egui = { version = "0.18.3", features = ["highlight_changes"] }
#bevy_prototype_debug_lines = { version = "0.10.1", features = ["3d"] }